k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-devops-platform
  labels:
    app: cloud-devops-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-devops-platform
  template:
    metadata:
      labels:
        app: cloud-devops-platform
    spec:
      containers:
        - name: cloud-devops-platform
          image: 472981659331.dkr.ecr.us-east-1.amazonaws.com/dev/cloud-devops-platform:1.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
