k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-devops-platform
  labels:
    app: cloud-devops-platform
spec:
  type: ClusterIP
  selector:
    app: cloud-devops-platform
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
